src/test/deca/codegen/valid/overflow_mul_int_conv_float.deca
// @result 6365370880.0
/*
    Description : Test sur la multiplication d'entiers modulo 2pow32 convertie en flottant

    Résultat : à définir...

*/
{
    println(900000*900000*2.5);
}