src/test/deca/codegen/invalid/overflow_mul_float.deca
/*
    Description : Test sur la gestion de l'overflow sur la multiplication de float

    Résultat : à définir...

*/

{
    println(4000000000.2*1000.3);
    println("Test échoué : voir p96 paragraphe 5 phrase 3 et 5");
}
